--- a/src/components/EtlToolsXvsYPage/SectionTwo/VendorAvatar/styles.module.less
+++ b/src/components/EtlToolsXvsYPage/SectionTwo/VendorAvatar/styles.module.less
@@ -4,11 +4,6 @@
   justify-content: center;
   gap: 10px;
   flex-direction: column;
-
-  img {
-    max-width: 36px;
-    max-height: 36px;
-  }
 }
 
 .tableLogoWrapper {
@@ -18,5 +13,7 @@
   border: 1px solid #D7DCE580;
   background-color: #fff;
   border-radius: 16px;
-  padding: 14px;
+  padding: 16px;
+  max-width: 64px;
+  max-height: 64px;
 }
